Refactoring listAll method.